syntax = "proto3";

package product_storage_v1;

option go_package = 'github.com/serenite11/market/proto/services/product_storage_v1;product_storage_v1';

import "services/product_storage_v1/dto.proto";

service ProductStorage {
  rpc GetProductById (GetProductById.Request) returns (GetProductById.Response);
  rpc FetchProducts  (FetchProducts.Request ) returns (FetchProducts.Response );
}
